[package]
name = "qx_rs_md_log"
version = "0.0.0"
edition = "2021"

authors = ["labi3265 <766043285@qq.com>"]
license = "MIT"
description = "quick log module in rust."
homepage = "https://github.com/labi3285"
repository = "https://github.com/labi3285/qx_rs_md_log"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
qx_rs_err = "^0.0.0"
qx_rs_time = "^0.0.0"
qx_rs_str = "^0.0.0"

qx_rs_md_env = "^0.0.0"

log = "^0.4.27"
log4rs = "^1.3.0"
anyhow = "^1.0.98"
chrono = "^0.4.41"


